[tool.poetry]
name = "mqtt_recorder"
version = "1.0.0"
description = "MQTT Record"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.scripts]
mqtt_recorder = "mqtt_recorder:main"

[tool.poetry.dependencies]
python = "^3.9"
asyncio-mqtt = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5.6.4"
pytest = "^6.2.0"
pytest-black = "^0.3.12"
pytest-isort = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylama.linter.pycodestyle]
max_line_length = 120

[tool.pylama.linter.mccabe]
complexity = 40
