[project]
name = "mqtt_recorder"
version = "1.1.0"
description = "MQTT Record"
authors = [{name="Jakob Schlyter", email = "jakob@kirei.se"}]
requires-python = ">=3.11,<4.0"

[project.scripts]
mqtt_recorder = "mqtt_recorder:main"

[tool.poetry.dependencies]
aiomqtt = "^2.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM115"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
