[project]
name = "mqtt_recorder"
description = "MQTT Record"
license = "BSD-2-Clause"
dynamic = ["version"]
requires-python = "<4.0,>=3.11"
authors = [
    {name = "Bobcat Ticketing Solutions AB"},
]
dependencies = [
    "aiomqtt>=2.4.0",
]

[project.scripts]
mqtt_recorder = "mqtt_recorder:main"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM115"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
